# geostationary

./: .gitignore  Cargo.toml  README.md  REVIEW_ISSUES.md  TODO.md  TODO.md.example  config.toml  libasound2-dev_1.2.11-1build2_amd64.deb
.github/agents/: plan.md  post-mortem.agent.md
.github/workflows/: create-plan-branch.yml  todo-to-issues.yml  validate-pr-target.yml
assets/maps/: default.station.ron  test_room.station.ron
bins/client/: Cargo.toml
bins/client/src/: client.rs  main.rs
bins/client/src/editor/: camera.rs  grid.rs  io.rs  mod.rs  painting.rs  palette.rs  spawns.rs
bins/client/src/main_menu/: mod.rs  title_screen.rs
bins/server/: Cargo.toml
bins/server/src/: main.rs
bins/shared/: Cargo.toml
bins/shared/src/: app_state.rs  config.rs  lib.rs  server.rs  templates.rs  world_init.rs  world_setup.rs
docs/: arc-guide.md  architecture.md  dependency-policy.md  map-format.md  module-coordination.md  plan-guide.md  testing-strategy.md
docs/arcs/: arc-1-networked-world-state.md  arc-2-tangible-station.md  networked-world-state.md
docs/layers/: L0-system.md  L1-foundation.md  L2-structural.md  L3-core.md  L4-mechanics.md  L5-meta.md  L6-interface.md  L7-cloud.md
docs/plans/: atmospherics.md  break-a-wall.md  character-models.md  dedicated-server-with-souls.md  map-authoring.md  networked-items.md  networked-multiplayer.md  physics-foundation.md  playable-character.md  slice-physics-foundation.md  slice-playable-character.md
modules/animation/: Cargo.toml
modules/animation/src/: lib.rs
modules/atmospherics/: Cargo.toml
modules/atmospherics/src/: debug_overlay.rs  gas_grid.rs  lib.rs
modules/camera/: Cargo.toml
modules/camera/src/: lib.rs
modules/creatures/: Cargo.toml
modules/creatures/src/: lib.rs
modules/input/: Cargo.toml
modules/input/src/: lib.rs
modules/interactions/: Cargo.toml
modules/interactions/src/: lib.rs
modules/items/: Cargo.toml
modules/items/src/: lib.rs
modules/main_menu/: Cargo.toml
modules/main_menu/src/: lib.rs  settings_screen.rs  title_screen.rs
modules/network/: Cargo.toml
modules/network/src/: client.rs  config.rs  lib.rs  orchestrate.rs  protocol.rs  runtime.rs  server.rs
modules/physics/: Cargo.toml
modules/physics/src/: lib.rs
modules/player/: Cargo.toml
modules/player/src/: lib.rs
modules/souls/: Cargo.toml
modules/souls/src/: lib.rs
modules/things/: Cargo.toml
modules/things/src/: lib.rs
modules/tiles/: Cargo.toml
modules/tiles/src/: lib.rs
modules/ui/: Cargo.toml
modules/ui/src/: button.rs  lib.rs  overlay.rs  theme.rs
modules/world/: Cargo.toml
modules/world/src/: lib.rs  lifecycle.rs  loader.rs  map_file.rs
spikes/gltf_animation/: Cargo.toml
spikes/gltf_animation/src/: lib.rs
src/: app_state.rs  camera.rs  client.rs  config.rs  main.rs  net_game.rs  network_events.rs  server.rs  world_setup.rs
src/creatures/: mod.rs
src/main_menu/: loading_screen.rs  mod.rs  settings_screen.rs  title_screen.rs
