[package]
name = "geostationary"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = [
    "modules/ui",
    "modules/network",
    "modules/tiles",
    "modules/things",
    "modules/physics",
    "modules/player",
    "modules/creatures",
    "modules/camera",
]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
opt-level = "s"
strip = "debuginfo"

[workspace.dependencies]
bevy = { version = "0.18", default-features = false, features = [
    # Content (2d + 3d + ui)
    "2d_bevy_render", "3d_bevy_render",
    "ui_api", "ui_bevy_render",
    "scene", "audio", "picking",
    # default_app
    "default_app",
    # default_platform minus wayland/x11
    "std", "bevy_gilrs", "bevy_winit", "default_font",
    "multi_threaded", "sysinfo_plugin",
    "android-game-activity", "android_shared_stdcxx", "webgl2",
] }
config = { version = "0.15", features = ["ron", "toml"] }
serde = { version = "1", features = ["derive"] }

[features]
default = ["client"]
client = ["dep:ui", "dep:camera", "dep:player", "dep:avian3d", "bevy/wayland", "bevy/x11"]

[dependencies]
bevy = { workspace = true }
config = { workspace = true }
serde = { workspace = true }

ui = { path = "modules/ui", optional = true }
network = { path = "modules/network" }
tiles = { path = "modules/tiles" }
things = { path = "modules/things" }
physics = { path = "modules/physics" }
avian3d = { version = "0.5", optional = true, default-features = false, features = [
    "debug-plugin", "collider-from-mesh", "bevy_scene", "bevy_picking",
] }
player = { path = "modules/player", optional = true }
creatures = { path = "modules/creatures" }
camera = { path = "modules/camera", optional = true }
