[package]
name = "geostationary"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = [
    "modules/ui",
    "modules/network",
    "modules/tiles",
    "modules/things",
    "modules/physics",
    "modules/player",
    "modules/creatures",
    "modules/camera",
    "modules/atmospherics",
    "modules/souls",
    "modules/input",
]

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 1

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
# Use "s" to optimize with size in mind (also try "z", sometimes it is better).
opt-level = "s"
strip = "debuginfo"

[workspace.dependencies]
bevy = { version = "0.18" }
config = { version = "0.15", features = ["ron", "toml"] }
serde = { version = "1", features = ["derive"] }
wincode = { version = "0.4", features = ["derive"] }

[dependencies]
bevy = { workspace = true }
config = { workspace = true }
serde = { workspace = true }

ui = { path = "modules/ui" }
network = { path = "modules/network" }
tiles = { path = "modules/tiles" }
things = { path = "modules/things" }
physics = { path = "modules/physics" }
player = { path = "modules/player" }
creatures = { path = "modules/creatures" }
camera = { path = "modules/camera" }
atmospherics = { path = "modules/atmospherics" }
souls = { path = "modules/souls" }
input = { path = "modules/input" }
