[workspace]
resolver = "3"
members = [
    "bins/shared",
    "bins/client",
    "bins/server",
    "modules/ui",
    "modules/network",
    "modules/tiles",
    "modules/things",
    "modules/physics",
    "modules/player",
    "modules/creatures",
    "modules/camera",
    "modules/atmospherics",
    "modules/souls",
    "modules/input",
    "modules/interactions",
]
default-members = ["bins/client"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 1

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
# Use "s" to optimize with size in mind (also try "z", sometimes it is better).
opt-level = "s"
strip = "debuginfo"

[workspace.dependencies]
bevy = { version = "0.18", default-features = false, features = [
    "bevy_state",
    "bevy_pbr",
    "bevy_mesh",
    "bevy_scene",
    "bevy_asset",
    "bevy_log",
] }
config = { version = "0.15", features = ["ron", "toml"] }
serde = { version = "1", features = ["derive"] }
wincode = { version = "0.4", features = ["derive"] }
