[package]
name = "geostationary-server"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true }

shared = { path = "../shared" }
network = { path = "../../modules/network" }
physics = { path = "../../modules/physics" }
tiles = { path = "../../modules/tiles" }
things = { path = "../../modules/things" }
atmospherics = { path = "../../modules/atmospherics" }
creatures = { path = "../../modules/creatures" }
souls = { path = "../../modules/souls" }
items = { path = "../../modules/items" }
