[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true }
config = { workspace = true }
serde = { workspace = true }

physics = { path = "../../modules/physics" }
things = { path = "../../modules/things" }
atmospherics = { path = "../../modules/atmospherics" }
creatures = { path = "../../modules/creatures" }
items = { path = "../../modules/items" }
