[package]
name = "interactions"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true }
input = { path = "../input" }
ui = { path = "../ui" }
tiles = { path = "../tiles" }
network = { path = "../network" }
items = { path = "../items" }
things = { path = "../things" }
wincode = { workspace = true }

[dev-dependencies]
bytes = "1"
