[package]
name = "things"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true }
ron = { workspace = true }
serde = { workspace = true }
wincode = { workspace = true }

physics = { path = "../physics" }
network = { path = "../network" }
input = { path = "../input" }
world = { path = "../world" }
animation = { path = "../animation" }

[dev-dependencies]
bytes = "1"
